<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_user_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/username_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_textview"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/username_textView"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_textView"
            app:layout_constraintTop_toBottomOf="@+id/username_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/password_textView"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_textView"
            app:layout_constraintTop_toBottomOf="@+id/password_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/email_textView"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:id="@+id/phone_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_textview"
            app:layout_constraintTop_toBottomOf="@+id/email_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/phone_textView"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:id="@+id/address_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_address_textView"
            app:layout_constraintTop_toBottomOf="@+id/phone_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/address_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/address_textView"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:id="@+id/state_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_textView"
            app:layout_constraintTop_toBottomOf="@+id/address_editText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/state_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/state_textView"
            app:layout_constraintBottom_toBottomOf="@+id/state_textView" />

        <TextView
            android:id="@+id/city_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_textView"
            app:layout_constraintTop_toBottomOf="@+id/state_textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/city_textView"
            app:layout_constraintBottom_toBottomOf="@+id/city_textView"
            android:layout_marginLeft="16dp"/>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_form_btn"
            app:layout_constraintTop_toBottomOf="@+id/city_textView"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/readBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_from_database_btn"
            app:layout_constraintTop_toBottomOf="@+id/submitBtn"
            android:layout_marginTop="16dp"/>

<!--        <ImageView
            android:id="@+id/loadContacts"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="Loading Contacts"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toBottomOf="@+id/readBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp"/>-->

<!--
        <TextView
            android:id="@+id/listContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loadContacts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <TextView
            android:id="@+id/textLinkify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/listContacts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/linkify"/>

        <TextView
            android:id="@+id/textLinkifyWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textLinkify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/textLinkitfyEmail"/>

        <TextView
            android:id="@+id/textLinkifyURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textLinkifyWeb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/textLinkifyWeb"/>
-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="5"
            app:layout_constraintTop_toBottomOf="@id/readBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>